--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Ignore everything in these directories
 DataBase/*
 __pycache__/*
+
 Inpainter/__pycache__
+Inpainter/models/*
+Inpainter/Model_graphs/*
 
 #Ignore these files
 #Some_file.py
