--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ InPainter/Restored_paintings/*
 InPainter/models/*
 InPainter/Model_graphs/*
 InPainter/train_loss_log.csv
+InPainter/.cometml-runs/*
 
 #Ignore these files
 #Some_file.py
