encoder Flag commig
Commit to see where I store originally the models best weights. For some future compatibility if needed

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ InPainter/.cometml-runs/*
 #Exclude these files from being ignored
 !/DataBase/DataBase_Functions.py
 !/DataBase/Libraries.txt
+!/InPainter/models/Baseline/best_inpainter.flag
 
 
 
